좋아요,북마크 코드 수정 및 테이블 구조 변경